--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+cffi==1.17.1
+cryptography==44.0.2
+iniconfig==2.1.0
 numpy==2.2.4
+packaging==24.2
 pandas==2.2.3
+pluggy==1.5.0
+pycparser==2.22
 PyMySQL==1.1.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
 SQLAlchemy==2.0.39
 typing_extensions==4.13.0
 tzdata==2025.2
-cffi==1.17.1 
-cryptography==44.0.2 
-pycparser==2.22
+joblib==1.4.2
+scikit==learn-1.6.1 
+scipy==1.15.2 
+threadpoolctl==3.6.0
